shell: forward accels to the focused widget

GtkWindow catches keybindings for the menu items _before_ passing them to
the focused widget. This is unfortunate and means that pressing ctrl+Left
arrow, Ctrl+Right arrow on the search bar ends up turning the EvView
instead of moving around the text.
Here we override GtkWindow's handler to do the same things that it
does, but in the opposite order and then we chain up to the grand
parent handler, skipping gtk_window_key_press_event.

See https://bugzilla.gnome.org/show_bug.cgi?id=676040